@@ -108,7 +108,5 @@
     <ProjectReference type="Assembly" localcopy="True" refto="../../../../lib/monodevelop/bin/MonoDevelop.Projects.dll" />
     <ProjectReference type="Assembly" localcopy="True" refto="../../../../lib/monodevelop/bin/MonoDevelop.Projects.Gui.dll" />
   </References>
-  <DeploymentInformation strategy="File">
-    <excludeFiles />
-  </DeploymentInformation>
+  <DeploymentInformation strategy="File" />
 </Project>
